# CrosswordLeague

./: .dockerignore  .gitignore  Dockerfile  README.md  main.py  pyproject.toml
app/: __init__.py  auth.py  config.py  database.py  league_service.py  make_admin.py  models.py  puzzle_gen.py  puzzle_gen_ai.py  puzzle_gen_algo.py  schemas.py  scoring.py  seed.py  server.py  services.py  vision.py
app/migrations/: env.py
app/migrations/versions/: 502f2c888447_add_user_table.py  6ab7fe596eb1_add_league_and_league_membership_tables.py  7c2a1b9d4e10_add_league_visibility_and_membership_status.py  8d3e2f5a6b21_add_solve_attempt_last_tick_at.py  975e29677dfd_baseline_schema.py  9e4f1a2c7d33_add_league_scoring_config.py  a1de780ad291_add_puzzle_and_solve_attempt_tables.py  b8fa35df7072_add_puzzle_type_to_puzzle_results.py  e49197c143cc_add_handle_to_user.py
app/routers/: auth.py  leaderboard.py  leagues.py  players.py  puzzles.py  results.py
frontend/: index.html  package-lock.json  package.json  tsconfig.json
frontend/src/: App.tsx  api.ts  main.tsx  styles.css  types.ts
frontend/src/components/: AdminPanel.tsx  BuilderGrid.tsx  ClueList.tsx  CrosswordGrid.tsx  HandleSetup.tsx  ScoringConfigEditor.tsx
frontend/src/contexts/: AuthContext.tsx
frontend/src/pages/: DailyPuzzle.tsx  Landing.tsx  LeagueDetail.tsx  Leagues.tsx  Profile.tsx  (+5 more)
scripts/: deploy-gcp.sh  deploy.sh  migrate_sqlite_to_pg.py
tests/: conftest.py  test_leaderboard.py  test_leaderboard_filter.py  test_leagues.py  test_player_stats.py  test_scoring.py  test_scoring_config.py  test_solve_timing.py
