[project]
name = "crossword-league"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.115.0",
    "sqlmodel>=0.0.22",
    "uvicorn>=0.30.6",
    "ruff>=0.14.8",
]

[dependency-groups]
dev = [
    "pytest>=8.3.4",
    "httpx>=0.27.2",
]

[tool.pytest.ini_options]
pythonpath = ["."]
